# release-process-o-tron

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pyproject.yml  sample_output.json  test_release.json
.devcontainer/: devcontainer.json
.github/workflows/: create-release-issues.yml  pr-validation.yml
docs/: pr-workflow.md
relprocotron/: __init__.py  __main__.py
relprocotron/templates/: release_activities.json.j2  release_process_o_tron.j2.json
tests/: __init__.py  test_main.py
